add header + main article

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
     <header class="site_header"></header>
     <!-- /.site_header -->
-    <main class="site_main"></main>
+    <main class="site_main">
+        <article class="preview"></article>
+        <div>
+            <section>
+                <header></header>
+                <div>
+                    <article class="miniature"></article>
+                    <article class="miniature"></article>
+                    <article class="miniature"></article>
+                </div>
+            </section>
+            
+        </div>
+    </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
     <!-- /.site_footer -->
