--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
     <!-- /.site_header -->
     <main class="site_main">
         <article class="preview"></article>
-        <div>
-            <section>
-                <header></header>
-                <div>
-                    <article class="miniature"></article>
-                    <article class="miniature"></article>
-                    <article class="miniature"></article>
-                </div>
-            </section>
-            
-        </div>
+        <section class="other_articles">
+            <header class="main_header"></header>
+            <div class="clearfix">
+                <aside class="miniature"></aside>
+                <div class="miniature center"></div>
+                <aside class="miniature"></aside>
+            </div>   
+        </section>
     </main>
     <!-- /.site_main -->
     <footer class="site_footer"></footer>
